# kdGfx

./: .gitignore  CMakeLists.txt  README.md
D3D12/: Version1.615.0.txt
Examples/: CMakeLists.txt
Examples/2D/: CMakeLists.txt
Examples/2D/BlurDualKawase/: CMakeLists.txt  DualKawaseBlurDown.hlsl  DualKawaseBlurUp.hlsl  Image.hlsl  Main.cpp  Sampler.hlsli
Examples/2D/CSSBoxShadow/: CMakeLists.txt  ColorRoundRect.hlsl  FastRoundRectBlur.hlsl  Main.cpp
Examples/2D/GenieEffect/: CMakeLists.txt  Image.hlsl  Main.cpp  VertexImage.hlsl
Examples/2D/ImageZoomFilter/: CMakeLists.txt  FSR.hlsl  Image.hlsl  Lanczos.hlsl  Main.cpp
Examples/2D/InsetShadow/: CMakeLists.txt  Color.hlsl  GaussianBlur.compute  Main.cpp  Shadow.hlsl
Examples/2D/RGBAToYUYV/: CMakeLists.txt  Main.cpp  YUYV.hlsl
Examples/2D/TouchEffect/: Arc.hlsl  CMakeLists.txt  Circle.hlsl  Image.hlsl  Main.cpp  Swipe.hlsl
Examples/2D/WindowDecoration/: CMakeLists.txt  Decoration.hlsl  Main.cpp
Examples/Assets/: README.md
Examples/RealTimeRender/: BaseTypes.hlsli  CMakeLists.txt  GBuffer.hlsl  Lighting.hlsl  Main.cpp  Math.hlsli  TAA.hlsl  ToneMapping.hlsl
Source/: CMakeLists.txt  ImGuiRenderer.cpp  ImGuiRenderer.h  ImageProcessor.cpp  ImageProcessor.h  MathLib.h  MipMapsGen.cpp  MipMapsGen.h  Misc.h  PCH.h  StagingBuffer.cpp  StagingBuffer.h  WindowApp.cpp  WindowApp.h
Source/RHI/: Adapter.h  BaseTypes.h  BindSet.h  BindSetLayout.h  Buffer.h  CommandList.h  CommandQueue.h  Device.h  Fence.h  Instance.cpp  Instance.h  Memory.h  Pipeline.h  Swapchain.h  Texture.h
Source/RHI/DirectX12/: DXAdapter.cpp  DXAdapter.h  DXBindSet.cpp  DXBindSet.h  DXBindSetLayout.cpp  DXBindSetLayout.h  DXBuffer.cpp  DXBuffer.h  DXCommandList.cpp  DXCommandList.h  DXCommandQueue.cpp  DXCommandQueue.h  DXDevice.cpp  DXDevice.h  DXFence.cpp  DXFence.h  DXInstance.cpp  DXInstance.h  DXMemory.cpp  DXMemory.h  DXPipeline.cpp  DXPipeline.h  DXSwapchain.cpp  DXSwapchain.h  DXTexture.cpp  DXTexture.h  DescriptorAllocator.cpp  DescriptorAllocator.h
Source/RHI/Vulkan/: VKAPI.h  VKAdapter.cpp  VKAdapter.h  VKBindSet.cpp  VKBindSet.h  VKBindSetLayout.cpp  VKBindSetLayout.h  VKBuffer.cpp  VKBuffer.h  VKCommandList.cpp  VKCommandList.h  VKCommandQueue.cpp  VKCommandQueue.h  VKDevice.cpp  VKDevice.h  VKFence.cpp  VKFence.h  VKInstance.cpp  VKInstance.h  VKMemory.cpp  VKMemory.h  VKPipeline.cpp  VKPipeline.h  VKSwapchain.cpp  VKSwapchain.h  VKTexture.cpp  VKTexture.h
Source/RenderGraph/: BaseTypes.h  RenderGraph.cpp  RenderGraph.h  RenderGraphBuilder.h  RenderGraphRegistry.cpp  RenderGraphRegistry.h  RenderGraphScope.h
Source/Scene/: Assets.h  CameraControl.cpp  CameraControl.h  Node.h  Project.cpp  Project.h  Scene.cpp  Scene.h  SceneLoader.cpp  SceneLoader.h
